--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,109 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Inter", sans-serif;
+}
+
+/* Landing page cover with img */
+.hero {
+  background: linear-gradient(rgba(0, 0, 0, 0.445), rgba(0, 0, 0, 0.411)),
+    url("/assets/images/group.png") no-repeat center / cover;
+  color: #fff;
+}
+
+.text-shadow {
+  text-shadow: 0px 2px 0px rgb(0 0 0 / 30%);
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.adjacent-post {
+  & .arrow-btn {
+    transition: width 300ms ease;
+    width: 50px;
+  }
+  &:hover {
+    & .arrow-btn {
+      width: 60px;
+    }
+  }
+}
+
+/* Feature content  */
+.feature {
+  gap: 4rem 2rem;
+  margin: 4rem 0;
+}
+
+.feature:first-of-type {
+  margin-top: 3rem;
+}
+
+.feature__content {
+  margin-bottom: 1rem;
+}
+
+@media screen and (min-width: 640px) {
+  .feature:nth-of-type(odd) .feature__content {
+    order: 2;
+  }
+
+  .feature .feature__content .feature__img {
+    border-top-right-radius: 8px;
+  }
+}
+
+/* Callout  */
+.callout .btn {
+  align-self: center;
+}
+
+/* Buttons  */
+.btn {
+  padding: 1.5rem 4vw;
+}
+
+.btn--stretched {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
+/* Footer  */
+.footer a {
+  color: #777;
+  transition: color 0.3s;
+}
+
+.footer a:hover {
+  color: #fff;
+}
+
+/* Specific scrollable container (e.g., .scrollable-div) */
+.scrollable-div::-webkit-scrollbar {
+  width: 10px;
+}
+
+.scrollable-div::-webkit-scrollbar-track {
+  background: #f0f0f0;
+}
+
+.scrollable-div::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 8px;
+  border: 2px solid #f0f0f0;
+}
+
+.scrollable-div::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+  visibility: hidden;
 }
