--- a/app/globals.css
+++ b/app/globals.css
@@ -2,109 +2,81 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Inter", sans-serif;
-}
-
-/* Landing page cover with img */
-.hero {
-  background: linear-gradient(rgba(0, 0, 0, 0.445), rgba(0, 0, 0, 0.411)),
-    url("/assets/images/group.png") no-repeat center / cover;
-  color: #fff;
-}
-
-.text-shadow {
-  text-shadow: 0px 2px 0px rgb(0 0 0 / 30%);
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-.adjacent-post {
-  & .arrow-btn {
-    transition: width 300ms ease;
-    width: 50px;
+@layer base {
+  a {
+    color: inherit;
+    text-decoration: none;
   }
-  &:hover {
-    & .arrow-btn {
-      width: 60px;
+
+  /* Specific scrollable container (e.g., .scrollable-div) */
+  .scrollable-div::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  .scrollable-div::-webkit-scrollbar-track {
+    background: #f0f0f0;
+  }
+
+  .scrollable-div::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 8px;
+    border: 2px solid #f0f0f0;
+  }
+
+  .scrollable-div::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+    visibility: hidden;
+  }
+}
+
+@layer utilities {
+  /* Landing page cover with img */
+  .hero {
+    background: linear-gradient(rgba(0, 0, 0, 0.445), rgba(0, 0, 0, 0.411)),
+      url("/assets/images/group.png") no-repeat center / cover;
+    color: #fff;
+  }
+
+  /* Feature content  */
+  .feature {
+    gap: 4rem 2rem;
+    margin: 4rem 0;
+  }
+
+  .feature:first-of-type {
+    @appy mt-[3rem];
+  }
+
+  .feature__content {
+    @apply mb-[1rem];
+  }
+
+  @media screen and (min-width: 640px) {
+    .feature:nth-of-type(odd) .feature__content {
+      order: 2;
+    }
+
+    .feature .feature__content .feature__img {
+      border-top-right-radius: 8px;
     }
   }
-}
 
-/* Feature content  */
-.feature {
-  gap: 4rem 2rem;
-  margin: 4rem 0;
-}
-
-.feature:first-of-type {
-  margin-top: 3rem;
-}
-
-.feature__content {
-  margin-bottom: 1rem;
-}
-
-@media screen and (min-width: 640px) {
-  .feature:nth-of-type(odd) .feature__content {
-    order: 2;
+  .callout {
+    @apply p-[2rem] md:p-[4rem] rounded-md bg-yellow-100 translate-y-[5rem];
   }
 
-  .feature .feature__content .feature__img {
-    border-top-right-radius: 8px;
+  /* Callout  */
+  .callout .btn {
+    @apply self-center;
   }
-}
 
-/* Callout  */
-.callout .btn {
-  align-self: center;
-}
+  /* Buttons  */
+  .btn-connect {
+    @apply px-4 py-2 text-black font-semibold bg-yellow-100 rounded-lg w-full flex flex-row items-center justify-center cursor-pointer;
+  }
 
-/* Buttons  */
-.btn {
-  padding: 1.5rem 4vw;
-}
-
-.btn--stretched {
-  padding-left: 4rem;
-  padding-right: 4rem;
-}
-
-/* Footer  */
-.footer a {
-  color: #777;
-  transition: color 0.3s;
-}
-
-.footer a:hover {
-  color: #fff;
-}
-
-/* Specific scrollable container (e.g., .scrollable-div) */
-.scrollable-div::-webkit-scrollbar {
-  width: 10px;
-}
-
-.scrollable-div::-webkit-scrollbar-track {
-  background: #f0f0f0;
-}
-
-.scrollable-div::-webkit-scrollbar-thumb {
-  background-color: #888;
-  border-radius: 8px;
-  border: 2px solid #f0f0f0;
-}
-
-.scrollable-div::-webkit-scrollbar-thumb:hover {
-  background-color: #555;
-  visibility: hidden;
+  /* Footer  */
+  .footer a {
+    @apply text-gray-300 transition duration-300 hover:text-white;
+  }
 }
